<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="lib_name">libaes</string>
    <string name="lib_description">云宝APP应用安卓元素类库示例。源码仅供调试参考，请勿直接引用。(WinBoLL APP application Android element class library example. The source is just for demo debug test, Do not quote directly.)</string>
    <string name="lib_home">https://winboll.cc/libaes</string>
    <string name="text_about">About</string>
    <string name="text_AppTheme">AppTheme</string>
    <string name="text_DefaultTheme">DefaultTheme</string>
    <string name="text_DepthTheme">DepthTheme</string>
    <string name="text_SkyTheme">SkyTheme</string>
    <string name="text_GoldenTheme">GoldenTheme</string>
    <string name="text_BearingTheme">BearingTheme</string>
    <string name="text_MemorTheme">MemorTheme</string>
    <string name="text_TaoTheme">TaoTheme</string>

    <string name="app_normal">Click here is switch to Normal APP</string>
    <string name="app_debug">Click here is switch to APP DEBUG</string>
	<string name="gitea_home">GITEA HOME</string>
    <string name="app_update">APP UPDATE</string>

</resources>
